--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMfhK0YgPglcZ8ZLozYxRoW",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -363,18 +361,8 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/kkipngenokoech/agents/blob/main/embedding.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "ME6pnO2YYb0X"
       },
@@ -415,7 +403,7 @@
         "id": "H7V4nH2VYhX0",
         "outputId": "bb069118-d5de-442e-9190-b2a53beaf416"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -656,7 +644,7 @@
         "id": "RwQYjZXZZasQ",
         "outputId": "63337415-cc54-427c-a5bc-aa2ac45f8558"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -687,7 +675,7 @@
         "id": "rBgjHwXcZHlT",
         "outputId": "170fbe4f-99b4-4cf1-95fe-5aa65ba48ab9"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
