--- a/flight_Agents.ipynb
+++ b/flight_Agents.ipynb
@@ -11,6 +11,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!pip install nbstripout\n"
+      ],
+      "metadata": {
+        "id": "wwNyAnb-rDjr"
+      },
+      "id": "wwNyAnb-rDjr",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "b1ff9086",
       "metadata": {
@@ -79,26 +91,11 @@
         "!pip install -q langchain-openai langchain\n"
       ],
       "metadata": {
-        "id": "1Ambl-Ch8H9T",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9eef6a9f-85e7-4067-9027-96bf542d48e6"
+        "id": "1Ambl-Ch8H9T"
       },
       "id": "1Ambl-Ch8H9T",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for google-search-results (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m84.8/84.8 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1060,25 +1057,11 @@
         "    print(f\"   • {tool_name}\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wr5QxRtlEUvX",
-        "outputId": "a2232202-a2b0-4780-a433-c7ddc654da56"
+        "id": "wr5QxRtlEUvX"
       },
       "id": "wr5QxRtlEUvX",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Travel Agent initialized with tools:\n",
-            "   • search_flights\n",
-            "   • book_flight\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1158,19 +1141,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 66,
-          "referenced_widgets": [
-            "1a3c71e8f90441efab55c60be759f4ec",
-            "5a8b293c984b4435a36c131b32f0c21a",
-            "e2241ef5f4354f75a05978eac3e0544b",
-            "8f712eceafff4e70badebdd979b7628f",
-            "9d958cc45db4411284865eead7afd963"
-          ]
-        },
-        "id": "0e2d757c",
-        "outputId": "dc7ecbc6-90f7-4609-e821-e7903a1e29f7"
+        "id": "0e2d757c"
       },
       "source": [
         "import sys\n",
@@ -1212,36 +1183,7 @@
       ],
       "id": "0e2d757c",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Output()"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "1a3c71e8f90441efab55c60be759f4ec"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Text(value='', layout=Layout(width='auto'), placeholder='Type your message here...')"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "e2241ef5f4354f75a05978eac3e0544b"
-            }
-          },
-          "metadata": {}
-        }
-      ]
+      "outputs": []
     }
   ],
   "metadata": {
@@ -1253,178 +1195,6 @@
       "provenance": [],
       "gpuType": "T4",
       "include_colab_link": true
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "1a3c71e8f90441efab55c60be759f4ec": {
-          "model_module": "@jupyter-widgets/output",
-          "model_name": "OutputModel",
-          "model_module_version": "1.0.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/output",
-            "_model_module_version": "1.0.0",
-            "_model_name": "OutputModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/output",
-            "_view_module_version": "1.0.0",
-            "_view_name": "OutputView",
-            "layout": "IPY_MODEL_5a8b293c984b4435a36c131b32f0c21a",
-            "msg_id": "",
-            "outputs": [
-              {
-                "output_type": "stream",
-                "name": "stdout",
-                "text": [
-                  "🤖 Agent: Hello! I'm your travel agent assistant. How can I help you today?\n"
-                ]
-              }
-            ]
-          }
-        },
-        "5a8b293c984b4435a36c131b32f0c21a": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "e2241ef5f4354f75a05978eac3e0544b": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "TextModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "TextModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "TextView",
-            "continuous_update": true,
-            "description": "",
-            "description_tooltip": null,
-            "disabled": false,
-            "layout": "IPY_MODEL_8f712eceafff4e70badebdd979b7628f",
-            "placeholder": "Type your message here...",
-            "style": "IPY_MODEL_9d958cc45db4411284865eead7afd963",
-            "value": ""
-          }
-        },
-        "8f712eceafff4e70badebdd979b7628f": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": "auto"
-          }
-        },
-        "9d958cc45db4411284865eead7afd963": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        }
-      }
     }
   },
   "nbformat": 4,
