--- a/principles-of-ai/bkoech.ipynb
+++ b/principles-of-ai/bkoech.ipynb
@@ -149,9 +149,9 @@
       "  video4     | Topics: travel, vlog              | Score:   1.29\n",
       "  video5     | Topics: AI, data_science          | Score:   4.90\n",
       "\n",
-      "\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\n",
+      "──────────────────────────────────────────────────────────────────────\n",
       "TOP 3 RECOMMENDATIONS:\n",
-      "\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\n",
+      "──────────────────────────────────────────────────────────────────────\n",
       "1. video3 (Relevance Score: 5.31)\n",
       "2. video1 (Relevance Score: 5.08)\n",
       "3. video5 (Relevance Score: 4.90)\n"
@@ -278,9 +278,9 @@
     "                                user_profile['avg_watch_time'], item)\n",
     "    print(f\"  {item['id']:10s} | Topics: {', '.join(item['topics']):25s} | Score: {score:6.2f}\")\n",
     "\n",
-    "print(f\"\\n{'\u2500'*70}\")\n",
+    "print(f\"\\n{'─'*70}\")\n",
     "print(\"TOP 3 RECOMMENDATIONS:\")\n",
-    "print(f\"{'\u2500'*70}\")\n",
+    "print(f\"{'─'*70}\")\n",
     "for rank, (video_id, score) in enumerate(recommendations, 1):\n",
     "    print(f\"{rank}. {video_id} (Relevance Score: {score:.2f})\")\n",
     "\n",
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "id": "4yk_0fu2H6DB"
    },
@@ -350,20 +350,20 @@
       "============================================================\n",
       "Starting Mission 1...\n",
       "============================================================\n",
-      "Mission 1 Result: \ud83c\udf89 SUCCESS \u2713\n",
+      "Mission 1 Result: 🎉 SUCCESS ✓\n",
       "  Steps taken: 132\n",
       "\n",
       "============================================================\n",
       "Starting Mission 2...\n",
       "============================================================\n",
-      "Mission 2 Result: \u274c FAILED\n",
+      "Mission 2 Result: ❌ FAILED\n",
       "  Steps taken: 196\n",
       "  Goal located at: (0, 50)\n",
       "\n",
       "============================================================\n",
       "Starting Mission 3...\n",
       "============================================================\n",
-      "Mission 3 Result: \u274c FAILED\n",
+      "Mission 3 Result: ❌ FAILED\n",
       "  Steps taken: 63\n",
       "  Goal located at: (10, 59)\n",
       "\n",
@@ -388,11 +388,11 @@
      "text": [
       "\n",
       "Map Statistics:\n",
-      "  \ud83d\udd25 Lava cells discovered: 182\n",
-      "  \u2705 Safe cells explored: 370\n",
-      "  \ud83c\udfaf Goal cells marked: 1\n",
-      "  \u2753 Unknown cells: 3047\n",
-      "  \ud83d\udcca Total cells mapped: 553\n",
+      "  🔥 Lava cells discovered: 182\n",
+      "  ✅ Safe cells explored: 370\n",
+      "  🎯 Goal cells marked: 1\n",
+      "  ❓ Unknown cells: 3047\n",
+      "  📊 Total cells mapped: 553\n",
       "\n",
       "============================================================\n"
      ]
@@ -688,7 +688,7 @@
     "                truncated = True\n",
     "\n",
     "            if terminated or truncated:\n",
-    "                result = '\ud83c\udf89 SUCCESS \u2713' if reward > 0 else '\u274c FAILED'\n",
+    "                result = '🎉 SUCCESS ✓' if reward > 0 else '❌ FAILED'\n",
     "                print(f\"Mission {mission} Result: {result}\")\n",
     "                print(f\"  Steps taken: {steps}\")\n",
     "                if rover.goal_pos:\n",
@@ -730,11 +730,11 @@
     "    unknown_cells = np.count_nonzero(rover.internal_model == 0)\n",
     "    \n",
     "    print(f\"\\nMap Statistics:\")\n",
-    "    print(f\"  \ud83d\udd25 Lava cells discovered: {lava_cells}\")\n",
-    "    print(f\"  \u2705 Safe cells explored: {safe_cells}\")\n",
-    "    print(f\"  \ud83c\udfaf Goal cells marked: {goal_cells}\")\n",
-    "    print(f\"  \u2753 Unknown cells: {unknown_cells}\")\n",
-    "    print(f\"  \ud83d\udcca Total cells mapped: {lava_cells + safe_cells + goal_cells}\")\n",
+    "    print(f\"  🔥 Lava cells discovered: {lava_cells}\")\n",
+    "    print(f\"  ✅ Safe cells explored: {safe_cells}\")\n",
+    "    print(f\"  🎯 Goal cells marked: {goal_cells}\")\n",
+    "    print(f\"  ❓ Unknown cells: {unknown_cells}\")\n",
+    "    print(f\"  📊 Total cells mapped: {lava_cells + safe_cells + goal_cells}\")\n",
     "    print(f\"\\n{'='*60}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -768,9 +768,9 @@
       "Mission: Collect 3 highest-utility targets\n",
       "\n",
       "\n",
-      "\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\n",
+      "──────────────────────────────────────────────────────────────────────\n",
       "DECISION ROUND 1\n",
-      "\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\n",
+      "──────────────────────────────────────────────────────────────────────\n",
       "Current position: (0, 0)\n",
       "\n",
       "Evaluating remaining targets...\n",
@@ -780,15 +780,15 @@
       "  Target (9, 9): Value=4, Cost=18.0, Utility=0.222\n",
       "  Target (2, 2): Value=3, Cost=4.0, Utility=0.750\n",
       "\n",
-      "  \u2713 SELECTED: (1, 8)\n",
+      "  ✓ SELECTED: (1, 8)\n",
       "    - Scientific Value: 10\n",
       "    - Energy Cost: 9.0\n",
       "    - Utility Score: 1.111\n",
       "    - Path length: 10 steps\n",
       "\n",
-      "\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\n",
+      "──────────────────────────────────────────────────────────────────────\n",
       "DECISION ROUND 2\n",
-      "\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\n",
+      "──────────────────────────────────────────────────────────────────────\n",
       "Current position: (1, 8)\n",
       "\n",
       "Evaluating remaining targets...\n",
@@ -797,15 +797,15 @@
       "  Target (9, 9): Value=4, Cost=9.0, Utility=0.444\n",
       "  Target (2, 2): Value=3, Cost=7.0, Utility=0.429\n",
       "\n",
-      "  \u2713 SELECTED: (5, 5)\n",
+      "  ✓ SELECTED: (5, 5)\n",
       "    - Scientific Value: 9\n",
       "    - Energy Cost: 15.0\n",
       "    - Utility Score: 0.600\n",
       "    - Path length: 8 steps\n",
       "\n",
-      "\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\n",
+      "──────────────────────────────────────────────────────────────────────\n",
       "DECISION ROUND 3\n",
-      "\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\n",
+      "──────────────────────────────────────────────────────────────────────\n",
       "Current position: (5, 5)\n",
       "\n",
       "Evaluating remaining targets...\n",
@@ -813,7 +813,7 @@
       "  Target (9, 9): Value=4, Cost=12.0, Utility=0.333\n",
       "  Target (2, 2): Value=3, Cost=14.0, Utility=0.214\n",
       "\n",
-      "  \u2713 SELECTED: (8, 1)\n",
+      "  ✓ SELECTED: (8, 1)\n",
       "    - Scientific Value: 8\n",
       "    - Energy Cost: 11.0\n",
       "    - Utility Score: 0.727\n",
@@ -1011,9 +1011,9 @@
     "    visited_path = [current_pos]\n",
     "    \n",
     "    for i in range(3):  # Collect 3 targets\n",
-    "        print(f\"\\n{'\u2500'*70}\")\n",
+    "        print(f\"\\n{'─'*70}\")\n",
     "        print(f\"DECISION ROUND {i+1}\")\n",
-    "        print(f\"{'\u2500'*70}\")\n",
+    "        print(f\"{'─'*70}\")\n",
     "        print(f\"Current position: {current_pos}\")\n",
     "        print(f\"\\nEvaluating remaining targets...\")\n",
     "        \n",
@@ -1039,7 +1039,7 @@
     "        total_science += best_val\n",
     "        total_energy += best_cost\n",
     "        \n",
-    "        print(f\"\\n  \u2713 SELECTED: {best_pos}\")\n",
+    "        print(f\"\\n  ✓ SELECTED: {best_pos}\")\n",
     "        print(f\"    - Scientific Value: {best_val}\")\n",
     "        print(f\"    - Energy Cost: {best_cost:.1f}\")\n",
     "        print(f\"    - Utility Score: {best_u:.3f}\")\n",
